# fuel_can_packer

./: .git-blame-ignore-revs  .gitignore  ALGORITHM.md  Cargo.toml  README.md  _headers  app.ts  assemble-site.mts  build.mts  eslint.config.mjs  eslint.config.ts  index.html  package-lock.json  package.json  serve.mts  solver-worker.ts  solver.test.ts  solver.ts  styles.css  tailwind.config.cjs  tailwind.config.ts  wrangler.toml
.github/: dependabot.yml
src/: lib.rs  main.rs
web/: app.js  app.ts  assemble-site.mjs  assemble-site.mts  build.mts  coi-serviceworker.js  eslint.config.mjs  index.html  package-lock.json  package.json  robots.txt  serve.mjs  serve.mts  sitemap.xml  solver-worker.ts  solver.ts  styles.css  test-solver.mjs  test-solver.mts  tsconfig.json  update-preload.mjs  update-preload.mts  z3-entry.js
