[package]
name = "fuel_can_packer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["solver_z3"]
solver_z3 = ["dep:z3"]
wasm = []

[[bin]]
name = "fuel_can_packer"
path = "src/bin/cli.rs"
required-features = ["solver_z3"]

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
z3 = { version = "0.19.5", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.93"
